--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+wemake-python-styleguide = "^0.15.2"
 
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
