--- a/.github/workflows/game-check.yml
+++ b/.github/workflows/game-check.yml
@@ -1,12 +1,18 @@
-name: game-check
-on: [push]
+name: Python CI
+
+on: [push, pull_request]
+
 jobs:
-  lint:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: make install
-      - run: make build
-      - run: make package-install
-      - run: make lint
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make install
+      - name: Run flake8
+        run: |
+          make lint
 
