--- a/.github/workflows/game-check.yml
+++ b/.github/workflows/game-check.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - name: Install dependencies
         run: |
           pip install poetry
