--- a/.github/workflows/game-check.yml
+++ b/.github/workflows/game-check.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - name: Setup latest python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.9'
       - name: Install dependencies
