--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8, <4.0"
+python = "^3.9"
 prompt = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
