--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,13 @@ doctests = True
 enable-extensions = G
 isort-show-traceback = True
 
-# clean default ignore list
-ignore = 
 
-per-file-ignores = brain_games/scripts/*.py: WPS421
-  # it is possibble to have prints in scripts
+ignore = 
+        WPS421, # It is possibble to have prints
+        S311,   # Using random module for games
+
+per-file-ignores = 
+
   
 
 [tool:pytest]
