--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "brain_games"
+name = "brain-games"
 version = "0.1.0"
 description = ""
 authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]
